@@ -4,6 +4,8 @@ dist_sbin_SCRIPTS = \
 	import_database.py \
 	renew-certs \
 	portal-backup \
-	update_user_certs.py
+	update_user_certs.py \
+	gen-drop-constraints.sql \
+	gen-add-constraints.sql
 
 cleandb:
