@@ -6,6 +6,7 @@
   * Add more bin scripts to install (#569)
   * portal_enable_abac controls all use of ABAC - so all disabled now (#556)
   * Add missing copyright (#576)
+  * Change member IDs when importing to new DB. And make a file of emails of people who had outside certs. (#577)
 
 == 1.5 ==
   * Fix error return on renewslice error in pgch (for omni/Flack) (#555)
